2011-06-26  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSGhostscriptImageRep.m:
	* Headers/Additions/GNUstepGUI/GSGhostscriptImageRep.h:
	* Source/GNUmakefile:
	* Source/NSImageRep.m: New image rep which attempts to
	invoke Ghostscript to rasterize PS/EPS/PDF images. It needs
	some polishing but basically works.

2011-06-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView_actions.m (-deleteToEndOfParagraph:):
	Implement method, which was introduced in OS X 10.3.

2011-06-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView_actions.m (-deleteToEndOfLine:): Fix
	implementation to work in the same way as under Emacs and OS X.
	In particular, the action now deletes the newline character when
	the insertion point is at the end of a line.

2011-06-22 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSPrintPanel.h: Add missing APPKIT_EXPORT for new
	strings.
	Bug point out by Bluna Ratimonkey <object@gmail.com>.

2011-06-19 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSOpenPanel.h
	* Headers/AppKit/NSSavePanel.h
	* Source/NSSavePanel.m
	* Source/NSOpenPanel.m: Change all the runModal:... methods to
	return an NSInteger.

2011-06-19  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTextView.m (-scrollRangeToVisible:): Fix to support scrolling
	to the empty range at the end of a document (i.e. {[string length], 0}).
	This fixes the scrolling when you repeatedly hit RETURN in TextEdit to
	create new pages (in wrap to page mode).

2011-06-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButtonCell.m (-setTitle:, -setAttributedTitle:,
	-setAlternateImage:, -setImagePosition:): Update the control to
	reflect the changes.

2011-06-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocumentController.m (-_openRecentDocument:): Use most
	current method to display document.

2011-06-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-setBounds:, -setBoundsSize:): Rewrite of this